k8s/staging/sosmed/sosmed.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sosmed
  namespace: staging
spec:
  replicas: 1
  selector:
    matchLabels:
      name: sosmed
      metadata: sosmed
  template:
    metadata:
      labels:
        name: sosmed
        metadata: sosmed
    spec:
      containers:
        - name: sosmed
          image: varidmahdi/sosmed:branch-appversion
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: sosmed
  namespace: staging
spec:
  #type: LoadBalancer
  ports:
    - port: 80
      #nodePort: 30080
  selector:
    name: sosmed
---
